analisis de la cesta de compra 2

--- a/content/blog/13-06-2022_clasificacion_asoc_2/index.Rmd
+++ b/content/blog/13-06-2022_clasificacion_asoc_2/index.Rmd
@@ -11,6 +11,18 @@ title: Clasificación Asociativa parte 2
 ---
 
 ## Caso de uso
+Uno de los casos de uso más común de los algoritmos de asociación es el **"product placement"** o colocación de productos en estanterías.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
